--- a/public/css/estiloPagamentos.css
+++ b/public/css/estiloPagamentos.css
@@ -11,6 +11,7 @@
   grid-template-columns: 1fr 2fr; /* 1 coluna para imagem e 2 para o texto*/
   grid-template-rows: auto; /* Ajusta automaticamente as linhas para o tamanho do conteúdo */
   gap: 10px; /* Adiciona espaço entre os elementos */
+  margin-left: 300px;
 }
 
 .cabecalho img {
@@ -45,7 +46,7 @@
 #tabelaPagamento td {
   border: 1px solid #000; /* Adiciona bordas para as células */
   padding: 8px; /* Adiciona espaço interno para as células */
-  text-align: left; /* Alinha o texto à esquerda */
+  text-align: center; /* Alinha o texto à esquerda */
 }
 
 .assinaturas {
