--- a/views/payments/show.ejs
+++ b/views/payments/show.ejs
@@ -130,7 +130,18 @@
     <p>Diretor: <label name="diretor"> <%= director_employee.name %> </label><br>
       Email: <label name="emaildiretor"> <%= director_employee.email %> </label></p>
     <br>
-    <% } %>
+    <% } else if(payment.status == "REPROVADO") { %>
+
+      <% if(leader_employee.name != "") { %>
+
+      <p>Gestor: <label name="gestor"> <%= leader_employee.name %> </label><br>
+        Email: <label name="emailgestor"><%= leader_employee.email %></label></p>
+      <br>
+      <% } else if(director_employee.name != "") { %>
+      <p>Diretor: <label name="diretor"> <%= director_employee.name %> </label><br>
+        Email: <label name="emaildiretor"> <%= director_employee.email %> </label></p>
+      <br>
+      <% } }%>
   </div>
 
   <% if(user.profile.description == "leaders" && payment.leader_id == "" && payment.director_id == "" &&
