--- a/views/payments/show.ejs
+++ b/views/payments/show.ejs
@@ -137,7 +137,7 @@
       <p>Gestor: <label name="gestor"> <%= leader_employee.name %> </label><br>
         Email: <label name="emailgestor"><%= leader_employee.email %></label></p>
       <br>
-      <% } else if(director_employee.name != "") { %>
+      <% }  if(director_employee.name != "") { %>
       <p>Diretor: <label name="diretor"> <%= director_employee.name %> </label><br>
         Email: <label name="emaildiretor"> <%= director_employee.email %> </label></p>
       <br>
