--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10944,3 +10944,12 @@ body {
 .space {
   margin-top: 90px;
 }
+
+#userIcon img {
+  width: 50px;
+  height: 50px;
+  margin-left: 68px;
+}
+#userIcon span {
+  font-size: 14px;
+}
