--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header.ejs') %>
+  <img src="./images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px">
   <div class="space">
     <h3 class='mb-4 mt-5' style="text-align: center;">Minhas solicitações de compras e serviços</h3>
     <div class="form-row justify-content-center">
