--- a/views/partials/header_show_purchase.ejs
+++ b/views/partials/header_show_purchase.ejs
@@ -34,9 +34,17 @@
 
       <h1><a href="/dashboard" class="logo">Compras</a></h1>
       <ul class="list-unstyled components mb-5">
-        <li class="active">
-          <a href="/dashboard"><span class="fa fa-user mr-3"></span><%= user.employee.name %></a>
-        </li>
+        <div id="userIcon">
+          <li class="active">
+            <a href="/dashboard">
+              <img src="./images/user.png">
+              <br>
+              <span>
+                <%= user.employee.name %>
+              </span>
+            </a>
+          </li>
+        </div>
         <li>
           <a href="/dashboard"><span class="fa fa-home mr-3"></span> Dashboard</a>
         </li>
@@ -56,7 +64,7 @@
             <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
           </li>
           <li>
-            <a href="/logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
+            <a href=" /logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
         </li>
       </ul>
     </nav>
