--- a/views/purchaseAndServices/revision_orcament.ejs
+++ b/views/purchaseAndServices/revision_orcament.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
   <div class="formSpace">
     <div class="sobreposicaoForm">
-      <h2>Revisão de Orçamentos de Compras e Serviços</h2>
+      <h2>Revisão Orçamentária</h2>
     </div>
 
     <form action="/upload/purchases" method="post" enctype="multipart/form-data" accept-charset="utf-8" style="border: 1px solid #000; padding: 40px 15px 10px 20px;">
