--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,5 +1,13 @@
 <%- include('../partials/header.ejs') %>
-  <div class="space">
+ 
+<% if(message) { console.log(message) %>
+  <script>
+    alert("<%=message%>");
+  </script>
+  <% } %>
+
+
+<div class="space">
     <h3 class='mb-4 mt-5' style="text-align: center;">Minhas solicitações de compras e serviços</h3>
     <div class="form-row justify-content-center">
       <div class="form-group col-md-3">
